- [skip-ci] Made temp change that is breaking. - Added extention for commonmark-java to include table parsing - DocBuilder now generates a home page currently based on the users README.md file. - Updated website, looks pretty sexy now I think. :o - Created stub modules for `com.elypia.commandler.doc` - unlike the modules in `com.elypia.commandler.test` these are made to help get a good grasp of a real world case.